--- a/templates/create_pdf.html
+++ b/templates/create_pdf.html
@@ -51,7 +51,6 @@
             text-align: center;
             border: 1px solid #ddd;
             font-size:12px
-           
         }
 
         th {
@@ -59,9 +58,27 @@
             font-weight: bold;
             font-size:12px
         }
-        thead tr th {
-            {% comment %} background-color: aqua; {% endcomment %}
-            
+
+        /* Prevent table header from repeating on multiple pages */
+        thead {
+            display: table-header-group;
+        }
+
+        /* Apply page-break rules to prevent breaks inside table rows */
+        table, tr, td {
+            page-break-inside: avoid;
+        }
+
+        thead {
+            display: table-row-group;
+        }
+
+        tfoot {
+            display: table-row-group;
+        }
+
+        tr {
+            page-break-inside: avoid;
         }
 
         tr:nth-child(even) {
@@ -114,7 +131,6 @@
                     <th rowspan="2">O‘lchov priborining koeffitsiyenti</th>
                     <th rowspan="2">O‘lchov priborining bir oy davomidagi hisobga olgan elektr energiyasi miqdori, ming kVt.c</th>
                 </tr>
-                
                 <tr>
                     <th>{{start_date}} yil 04:00 holatiga</th>
                     <th>{{end_date}} yil 04:00 holatiga</th>
@@ -125,7 +141,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for row in received%}
+                {% for row in received %}
                 {% if row.meter_no != "===" %}
                 <tr>
                     <td class="text-center">{{ forloop.counter }}</td>
@@ -155,7 +171,7 @@
                     <td><h3 class="text-left"></h3></td>
                     <td><h3 class="text-left"></h3></td>
                 </tr>
-                {% for row in transmissed%}
+                {% for row in transmissed %}
                 {% if row.meter_no != "===" %}
                 <tr>
                     <td class="text-center">{{ forloop.counter }}</td>
