--- a/templates/create_pdf.html
+++ b/templates/create_pdf.html
@@ -16,7 +16,7 @@
 
         /* Body and container styling */
         body {
-            font-family: 'Times New Roman', Times, serif, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
             line-height: 1.6;
             background-color: #f8f9fa;
         }
@@ -44,13 +44,12 @@
             border-collapse: collapse;
             background-color: white;
         }
-
         th,
         td {
             padding: 10px;
             text-align: center;
             border: 1px solid #ddd;
-            font-size:12px
+            font-size:9px
         }
 
         th {
@@ -132,8 +131,8 @@
                     <th rowspan="2">O‘lchov priborining bir oy davomidagi hisobga olgan elektr energiyasi miqdori, ming kVt.c</th>
                 </tr>
                 <tr>
-                    <th>{{start_date}} yil 04:00 holatiga</th>
-                    <th>{{end_date}} yil 04:00 holatiga</th>
+                    <th>{{start_date}} yil  holatiga</th>
+                    <th>{{end_date}} yil  holatiga</th>
                 </tr>
                 <tr>
                     <td colspan="1"><h3 class="text-left">I</h3></td>
