--- a/templates/create_pdf.html
+++ b/templates/create_pdf.html
@@ -16,7 +16,7 @@
 
         /* Body and container styling */
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: Calibri;
             line-height: 1.6;
             background-color: #f8f9fa;
         }
@@ -112,7 +112,7 @@
         <h5 class="text-left">Podstansiya: {{object_data.object_name}}</h5>
         <h5 class="text-left">Asos: 2019 yil 11 sentabrdagi 2-sonli buyruq.</h5>
         <h5 class="text-left">Xay'at a'zolari:</h5>
-        <h5 class="text-left">Xay´at raisi: {select1} bosh muxandisi - D.B.Maxamov</h5>
+        <h5 class="text-left">Xay´at raisi:  bosh muxandisi - D.B.Maxamov</h5>
         <h5 class="text-left">Xay'at a'zolari:</h5>
         <h5 class="text-left">{{object_data.description}} ICHTB boshlig`i-I.B.To`raev</h5>
         <h5 class="text-left">{{object_data.description}} PX boshlig`i-D.S.Jo`raev</h5>
@@ -149,8 +149,8 @@
                     <td class="text-center">{{ row.dan_ap|default:"-"|add_space_if_decimal }}</td>
                     <td class="text-center">{{ row.gacha_ap|default:"-"|add_space_if_decimal }}</td>
                     <td class="text-center">{{ row.ap_farq|default:"-"|add_space_if_decimal }}</td>
-                    <td class="text-center">{{ row.koef|default:"-"|add_space_if_decimal }}</td>
-                    <td class="text-center">{{ row.ap_kwh|default:"-"|add_space_if_decimal }}</td>
+                    <td class="text-center">{{ row.koef|default:"-"|add_space_if_decimal_zero }}</td>
+                    <td class="text-center">{{ row.ap_kwh|default:"-"|add_space_if_decimal_zero }}</td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -160,7 +160,7 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td><h3 class="text-center">{{ total_ap_kwh|add_space_if_decimal }}</h3></td>
+                    <td><h3 class="text-center">{{ total_ap_kwh|add_space_if_decimal_zero }}</h3></td>
                 </tr>
                 <tr>
                     <td><h3 class="text-left">IV.4</h3></td>
@@ -179,8 +179,8 @@
                     <td class="text-center">{{ row.dan_am|default:"-"|add_space_if_decimal }}</td>
                     <td class="text-center">{{ row.gacha_am|default:"-"|add_space_if_decimal }}</td>
                     <td class="text-center">{{ row.ap_farq|default:"-"|add_space_if_decimal }}</td>
-                    <td class="text-center">{{ row.koef|default:"-"|add_space_if_decimal }}</td>
-                    <td class="text-center">{{ row.am_kwh|default:"-"|add_space_if_decimal }}</td>
+                    <td class="text-center">{{ row.koef|default:"-"|add_space_if_decimal_zero }}</td>
+                    <td class="text-center">{{ row.am_kwh|default:"-"|add_space_if_decimal_zero }}</td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -190,7 +190,7 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td><h3 class="text-center">{{ transmissed_total|add_space_if_decimal }}</h3></td>
+                    <td><h3 class="text-center">{{ transmissed_total|add_space_if_decimal_zero }}</h3></td>
                 </tr>
             </tbody>
         </table>
